--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "flashpaly",
+  "name": "flashtype",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/RincyPradeep/flashtype",
+  "homepage": "http://RincyPradeep.github.io/flashtype",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
